2008-08-18  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_can_deinterlace):
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_can_deinterlace):
	* src/backend/bacon-video-widget.h:
	Add _can_deinterlace function to the backends

	* src/totem.c (totem_callback_connect): Only show
	the deinterlacing menu item if the backend supports it
	(Helps: #491627)

2008-08-17  Philip Withnall  <philip@tecnocode.co.uk>

	* bindings/python/totem.defs:
	* src/totem-object.c: (totem_get_current_mrl):
	* src/totem.h: Add a totem_get_current_mrl function and expose it in
	the Python bindings. Necessary for the Totem plugin for Conduit.
	(Closes: #459505)

2008-08-14  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Support libtool 2.2, don't try to check for
	presence of Python through compiling against it, as libtool is
	required to compile against it, and libtool isn't available yet
	during configure
	Adapted from patches by Rémi Cardona and Patryk Zawadzki
	(Closes: #532591)
	Also fix the message telling us whether Vala is enabled

2008-08-14  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Handle video/ogg for thumbnails,
	because libgnomeui sucks (Closes: #545130)

2008-08-14  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (playlist_select_subtitle_action_callback),
	(playlist_copy_location_action_callback): Always call
	totem_add_subtitle with the path of the currently playing movie
	* src/totem-uri.c (totem_add_subtitle): When passed a path, still
	use the last open path to be in, but also add a shortcut to
	the currently playing movie, so you can easily access it to open
	a subtitle (Closes: #545984)

2008-08-14  Gilles Dartiguelongue  <gdartigu@svn.gnome.org>

	* configure.in: allow browser plugins to be installed
	somewhere else than in ${libdir}/mozilla/plugins.
	(Closes: #547688)

2008-08-13  Bastien Nocera  <hadess@hadess.net>
