@@ -34,7 +34,7 @@ AC_PATH_PROG([GLIB_MKENUMS],[glib-mkenums])
 
 # Requirements
 GLIB_REQS=2.13.4
-GTK_REQS=2.12.6
+GTK_REQS=2.13.0
 TOTEM_PLPARSER_REQS=2.21.90
 GNOMEUI_REQS=2.3.3
 LIBGNOME_REQS=2.14.0
